--- a/simon_zsolt.tex
+++ b/simon_zsolt.tex
@@ -1,10 +1,14 @@
 \documentclass{article}
 
+\usepackage{hyperref}
+
 \begin{document}
 
 CV
 
-Zsolt Simon
+Simon Zsolt 
+
+GitHub: \href{https://github.com/simonzsolt}{simonzsolt}
 
 Születési dátum: 1989 OKtóber 24
 
@@ -16,148 +20,184 @@ Telefon: +36 20 4110 724
 
 Tanulmányok
 
-University: Eötvös Loránd University of Budapest, Faculty of Humanities
-      From 2015 ongoing studies (Master's degree) at Te Center for Renaissance
-       Studies (CHER - Centre des Hautes Études de la Renaissance) at Eötvös Loránd
-       University of Budapest
-      2015 Diploma (Bachelor's degree in Hungarian) at Eötvös Loránd University of
-       Budapest
-      Research director and topic: Iván Horváth, in studying medieval literary
-       history and textual studies applied to the methods of digital humanities
-       (database of old Hungarian verse, online critical editions)
-Employment and other academic activities
-      From 2017 - Contributor in „POSTDATA – Poetry Standardization and Linked
-       Open Data” project. I presented the datamodell for the database of 16 century
-                                                                            th
+\begin{itemize}
 
-       Hungarian poems (Répertoire de la poésie hongroise ancienne, RPHA,
-       htp://rpha.elte.hu/)
+  \item{ 2015-től Eötvös Loránd Tudományegyetem Bölcsésztudományi Kar Reneszánsz Tanulmányok mesterszak }
 
-      26–28 April 2017 - Participation in the "Late Medieval and Early Modern Book
-       Culture - Book Production, Book Ownership, and Book Collecting"- 5th
-       TRAINING SCHOOL COST ACTION IS 1301, Public Library Deventer;
-       Deventer Verhaal, Netherlands
+  \item{ 2015: BA Eötvös Loránd Tudományegyetem Bölcsésztudományi Kar magyar alapképzési szak }
 
-      From 2016 - Participant in a project to create an online critical edition of a
-       medieval hungarian book (Codex Pray) containing the frst piece of Hungarian
-       literature (Halotti beszéd és könyörgés [Funeral Sermon and Prayer], HBK). My
-       duties will be concerned with digital philology.
+\end{itemize}
 
+Tudományos és szakmai tevékenységek
 
+\begin{itemize}
 
+  \item{ 2017-től közreműködő a  ``POSTDATA – Poetry Standardization and Linked
+       Open Data'' projektben. }
 
-                                             1
-Zsolt Simon                                                                           CV
+  \item{ 2016 Október 17: Előadás a Pesti Bölcsész Akadémia konferenciasorozaton (ELTE)
+          Gráfadatbáztisok az irodalomtudományban címmel 
+          \href{http://pestibolcseszakademia.blog.hu/2016/10/04/digitalis\_bolcseszet\_szovegen\_innen\_es\_tul\_marothy\_szilvia\_es\_simon\_zsolt\_kurzusa}
+          {[Program].} }
 
-      17 October 2016 - Presentation at "Pesti Bölcsész Akadémia" conference series
-       held at Eötvös Loránd University of Budapest, Faculty of Humanities,
-       Gráfadatbáztisok az tirodalomtudományban [Graph databases tin ltiterary studties],
-       (htp://pestibolcseszakademia.blog.hu/2016/10/04/digitalis\_bolcseszet\_szovegen\_innen\_es\_tul\_marothy\_szilvia\_es\_simon\_zsolt\_kurzusa)
+  \item { 2016 Október 24–28: DARIAH Winter School ``Open Data
+          Citation for Social Science and Humanities'', Humanities at Scale project (HaS),
+          Prága. }
 
-      24–28 October 2016 - Participation in DARIAH Winter School “Open Data
-       Citation for Social Science and Humanities”, Humanities at Scale project (HaS),
-       Prague
+  \item{ 2016 November 7: Előadás a Pesti Bölcsész Akadémia konferenciasorozaton (ELTE)
+        Hálózati versadatbázisok címmel 
+        \href
+          {http://pestibolcseszakademia.blog.hu/2016/10/04/digitalis\_bolcseszet\_szovegen\_innen\_es\_tul\_marothy\_szilvia\_es\_simon\_zsolt\_kurzusa}
+          {[Program].} 
+        }
 
-      7 November 2016 - Presentation at "Pesti Bölcsész Akadémia" conference series
-       held at Eötvös Loránd University of Budapest, Faculty of Humanities, Hálózati
-       versadatbázisok [Online databases of verses],
-       (htp://pestibolcseszakademia.blog.hu/2016/10/04/digitalis\_bolcseszet\_szovegen
-       \_innen\_es\_tul\_marothy\_szilvia\_es\_simon\_zsolt\_kurzusa)
+  \item{ 2016 Február 1–6: Részvétel a ``Paleography, Codicology, Philology.
+       Digital Editing of Medieval Manuscripts Training Programme'' képzésen.
+       Klosterneuburg, Bécs. }
 
-      1–6 February 2016 - Participation in the "Paleography, Codicology, Philology.
-       Digital Editing of Medieval Manuscripts Training Programme" at
-       Klosterneuburg, Vienna
-      2015–2016 - Technical editor of the journal Informáctiótörténetti Műhely
-       [Informattion Htistory Workshop] for the following editions:
+  \item{ 2015–2016: Technikai szerkesztője az Informáctiótörténetti Műhely című sorozat alábbi megjelenéseinek: }
 
-        Péter BOGNÁR, A régti magyar párrímköltészet német vonatkozásati, 2016,
-         (htp://renaissance.elte.hu/wp-content/uploads/2016/02/parrim.pdf)
+    \begin{itemize}
 
-        Iván HORVÁTH, Ómagyar szövegemlékek mtint textológtiati tárgyak, 2015,
-         (htp://renaissance.elte.hu/wp-content/uploads/2016/01/Omagyar\_szo%CC
-         %88vegemle%CC%81kek\_d-ed-150bb.pdf)
+      \item{ \textsc{Bognár} Péter, \textit{A régti magyar párrímköltészet német vonatkozásati}, 2016,
+        \href
+          {htp://renaissance.elte.hu/wp-content/uploads/2016/02/parrim.pdf}
+          {[PDF].}
+      }
 
-        Tiziano T UBAY, A székely írás kutatásának története, 2015,
-         (htp://renaissance.elte.hu/wp-content/uploads/2016/04/Tubay\_A-szekely-
-         iras-kutatasanak-tortenete\_OSzK\_2015\_digitalis.pdf)
-      7–9 December 2015 - Participation in the “Crossing borders. Te transmission
-       of religious texts and the migration of scholars in late medieval and early
-       modern Europe". COST Action IS1301 Training School at Budapest, Hungary
-      24 November 2015 - Presentation at the "DHU2015 Workshop, Számítógép az
-       irodalomtudományban" [Computers in Literary Studies], held by the Library of
-       the Hungarian Academy of Sciences and Budapest University of Technology
-       and Economics, (htp://dhu2015.mit.bme.hu/felhivas, only in Hungarian)
+      \item{ \textsc{Horváth} Iván, \textit{Ómagyar szövegemlékek mtint textológtiati tárgyak}, 2015,
+        \href
+          {http://renaissance.elte.hu/wp-content/uploads/2016/01/Omagyar\_szo\%CC\%88vegemle\%CC\%81kek\_d-ed-150bb.pdf}
+          {[PDF].}
+      }
 
+      \item{ \textsc{Tubay} Tiziano, \textit{A székely írás kutatásának története}, 2015,
+        \href
+          {http://renaissance.elte.hu/wp-content/uploads/2016/04/Tubay\_A-szekely-iras-kutatasanak-tortenete\_OSzK\_2015\_digitalis.pdf}
+          {[PDF].}
+      }
+      
+    \end{itemize}
 
+  \item{ 2015 November 24: Előadás a ``DHU2015 Workshop, Számítógép az
+    irodalomtudományban'' című workshopon, az MTA BTK Irodalomtudományi Intézete és a BME Méréstechnikai és Információs Rendszerek Tanszéke közös szervezésével. 
+    \href
+      {htp://dhu2015.mit.bme.hu/felhivas} 
+      {[Felhívás].}
+  }
 
-                                           2
-Zsolt Simon                                                                                 CV
+  \item{ 2015: THECA – A középkori magyarországi könyvkatalógusok és könyvjegyzékek adatbázis fejlesztése
+    \href
+      {http://hece.elte.hu/index.php/theca/}
+      {[Impresszum].}
+  }
 
-      2015 - Part of the organizing group of a conference aimed at undergraduate and
-       graduate students
-       (FiKon, htp://m.cdn.blog.hu/f/fkon/image/felhivas\_fkon\_2015.pdf, only in
-       Hungarian)
-      2015 development of the databse concerning medieval Hungarian book culture
-       (book collections between 1000–1526 in the Kingdom of Hungary) known as
-       THECA (htp://hece.elte.hu/index.php/theca/, htps://theca-
-       online.herokuapp.com/\#/list)
-      2015 - publication: Az 1540 előtti magyar ráolvasások: „vagyok bűnes [...] régti
-       nagy sok bálványtimádásomba” [Hungartian tincantattions before 1540] in
-       Információtörténeti Műhely, ed. Debóra BALÁZS, Zsófa Ágnes BARTÓK, Péter
-       BOGNÁR, Szilvia MARÓTHY, Budapest, ELTE BTK Régi magyar irodalom
-       Tanszék, 66–90, 2015, (htp://renaissance.elte.hu/wp-
-       content/uploads/2016/02/gremlek.pdf, only in Hungarian)
-      2014 - Collaborator at the Digital Philology Division at National Széchényi
-       Library
-      2014 - Developer of the Régti Magyar Exemplumadatbáztis (Database of Old
-       Hungartian Exempla, htp://sermones.elte.hu/exemplumadatbazis/)
-      2013 - publication: A Szelesteti-féle ráolvasás (Te tincantattion "Szelesteti") in
-       VERS: Verstan, poéttika, trópusok a 15–17. századti Európában, Fiatalok
-       Konferenciája 2013, Budapest, reciti, 93–105. (htp://reciti.hu/wp-
-       content/uploads/fkon1vn.pdf, only in Hungarian)
-      2013 - Junior editor of the book Mathtias Rex 1458–1490: Hungary at the Dawn
-       of the Renatissance, (htp://renaissance.elte.hu/?page\_id=452)
-      2013–2016 - Internship at the Department of Early Hungarian Literature,
-       Institute of Hungarian Literature and Cultural Studies at Eötvös Loránd
-       University of Budapest
-Languages
-      Hungarian - native
-      English - high profciency in reading and writing (C1)
-      Latin - elementary profciency in reading
-      Italian - elementary profciency in reading
+  \item{ 2015: A HECE -- Humanism in East Central Europe WordPress alapú blog szerkesztése. 
+    \href
+      {http://hece.elte.hu/}
+      {[Honlap].}
+  }
 
+  \item{ 2014: Az Országos Széchényi Könyvtár Digitális Filológia osztályánal korai közreműködője. 
+    Az osztály hosszas szervezést követően nem alakult meg teljesen. }
 
+  \item{ 2014: A Régi Magyar Exemplumadatbáztis társ-fejlesztője és műszaki szerkesztője.
+    \href
+      {htp://sermones.elte.hu/exemplumadatbazis/}
+      {[Impresszum].}
+  }
 
+  \item{ 2013: A \textit{Mathtias Rex 1458--1490: Hungary at the Dawn
+         of the Renaissance} című kötet Junior szerkesztője.
+    \href
+      {http://renaissance.elte.hu/?page\_id=665} 
+      {[Impresszum].}
+  }
 
-                                              3
-Zsolt Simon                                                      CV
+  \item{ 2013--2016: Gyakornoki pozíció az ELTE BTK Magyar Irodalom- és Kultúratudományi 
+    Intézet Régi Magyar Irodalom Tanszékén.
+  }
 
-Technical skills
-      PHP
-      JavaScript development
-        ES6
-        backend: Node.js
-        frontend: Angular, Material, Bootstrap
-        RESTful APIs
-        Singe Page Applications
-      Unit testing: Mocha, Jasmin
-      Git
-      XML (TEI)
-      HTTP protocol
-      Databases, query languages:
-        MySQL and derivatives
-        SQL and derivatives
-        NoSQL databases:
-              Document databases: MongoDB, ElasticDB, CouchDB
-              Graph databases: Neo4j
-              Multimodel databses: ArangoDB, OrientDB
-      experience with UNIX-like environments
-      typeseting: LATEΧ
+\end{itemize}
 
+Nyelvtudás
+  
+  \begin{itemize}
 
+    \item{ Angol: C1 komplex nyelvvizsga, folyékon szövegértés és fogalmazás }
 
+    \item{ Latin: alapszintű olvasási kompetencia }
 
-                                        4
+    \item{ Olasz: alapszintű olvasási és szövegértési kompetencia }
+  
+  \end{itemize}
+
+Szakmai ismeretek
+
+  \begin{itemize}
+  
+    \item{ PHP }
+
+    \item{ Javascript:
+
+      \begin{itemize}
+
+        \item{ ES6, Node.js, Angular }
+
+      \end{itemize}
+    }
+
+    \item{ git, JIRA }
+
+    \item{ HTTP protokol }
+
+    \item{ SQL és NoSQL adatbázisok: 
+
+      \begin{itemize}
+    
+        \item{ MariaDB, SQL Server, MongoDB, OrientDB, ArangoDB, Elasticsearch, Neo4j }
+    
+      \end{itemize}
+    }
+
+    \item{ UNIX-típusú rendszrek ismerete }
+
+    \item{\LaTeX}
+
+    \item{ Perl }
+
+  \end{itemize}
+
+      % // other
+      % 26–28 April 2017 - Participation in the "Late Medieval and Early Modern Book
+      %  Culture - Book Production, Book Ownership, and Book Collecting"- 5th
+      %  TRAINING SCHOOL COST ACTION IS 1301, Public Library Deventer;
+      %  Deventer Verhaal, Netherlands
+
+      % //other
+      % 7–9 December 2015 - Participation in the “Crossing borders. Te transmission
+      %  of religious texts and the migration of scholars in late medieval and early
+      %  modern Europe". COST Action IS1301 Training School at Budapest, Hungary
+
+      % // other
+      % 2015 - Part of the organizing group of a conference aimed at undergraduate and
+      %  graduate students
+      %  (FiKon, htp://m.cdn.blog.hu/f/fkon/image/felhivas\_fkon\_2015.pdf, only in
+      %  Hungarian)
+
+      % // other publications
+      % 2015 - publication: Az 1540 előtti magyar ráolvasások: „vagyok bűnes [...] régti
+      %  nagy sok bálványtimádásomba” [Hungartian tincantattions before 1540] in
+      %  Információtörténeti Műhely, ed. Debóra BALÁZS, Zsófa Ágnes BARTÓK, Péter
+      %  BOGNÁR, Szilvia MARÓTHY, Budapest, ELTE BTK Régi magyar irodalom
+      %  Tanszék, 66–90, 2015, (htp://renaissance.elte.hu/wp-
+      %  content/uploads/2016/02/gremlek.pdf, only in Hungarian)
+
+      % // other publication
+      % 2013 - publication: A Szelesteti-féle ráolvasás (The tincantattion "Szelesteti") in
+      %  VERS: Verstan, poéttika, trópusok a 15–17. századti Európában, Fiatalok
+      %  Konferenciája 2013, Budapest, reciti, 93–105. (htp://reciti.hu/wp-
+      %  content/uploads/fkon1vn.pdf, only in Hungarian)
 
 
 \end{document}
