--- a/simon_zsolt_display_hu.tex
+++ b/simon_zsolt_display_hu.tex
@@ -63,7 +63,7 @@ Tudományos és szakmai tevékenységek
   \item{ 2017-től közreműködő a  ``POSTDATA – Poetry Standardization and Linked
        Open Data'' projektben. }
   \item{ 2016 Október 17: Előadás a Pesti Bölcsész Akadémia konferenciasorozaton (ELTE)
-          Gráfadatbázisok az irodalomtudományban címmel 
+          Gráfadatbázisok az irodalomtudományban címmel.
           \href{http://pestibolcseszakademia.blog.hu/2016/10/04/digitalis\_bolcseszet\_szovegen\_innen\_es\_tul\_marothy\_szilvia\_es\_simon\_zsolt\_kurzusa}
           {[Program].} 
         }
@@ -71,7 +71,7 @@ Tudományos és szakmai tevékenységek
           Citation for Social Science and Humanities'', Humanities at Scale project (HaS),
           Prága. }
   \item{ 2016 November 7: Előadás a Pesti Bölcsész Akadémia konferenciasorozaton (ELTE)
-        Hálózati versadatbázisok címmel 
+        Hálózati versadatbázisok címmel.
         \href
           {http://pestibolcseszakademia.blog.hu/2016/10/04/digitalis\_bolcseszet\_szovegen\_innen\_es\_tul\_marothy\_szilvia\_es\_simon\_zsolt\_kurzusa}
           {[Program].} 
@@ -104,7 +104,7 @@ Tudományos és szakmai tevékenységek
       {htp://dhu2015.mit.bme.hu/felhivas} 
       {[Felhívás].}
   }
-  \item{ 2015: THECA – A középkori magyarországi könyvkatalógusok és könyvjegyzékek adatbázis fejlesztése
+  \item{ 2015: THECA – A középkori magyarországi könyvkatalógusok és könyvjegyzékek adatbázis fejlesztése.
     \href
       {http://hece.elte.hu/index.php/theca/}
       {[Impresszum].}
