set protrait edit contacts edit job history set font size

--- a/simon_zsolt_display_hu.tex
+++ b/simon_zsolt_display_hu.tex
@@ -29,16 +29,33 @@
 % \setlength{\parskip}{1em}
 \renewcommand{\baselinestretch}{1.1}
 
+\usepackage{graphicx}
+\graphicspath{ {./} }
+\usepackage{wrapfig}
+
 \begin{document}
 
-\large{CV}
+\begin{wrapfigure}{r}{13em}
+    \flushright
+    \includegraphics[scale=0.4]{portrait_mono} 
+\end{wrapfigure}
 
-\vspace{1em}
+\begin{Large}
+  % CV
 
-Simon Zsolt\\ 
-GitHub: \href{https://github.com/simonzsolt}{\textbf{simonzsolt}}\\
+  % \vspace{1em}
+
+  \textsc{Simon Zsolt}
+
+  \vspace{1em}
+
+\end{Large}
+
+\large
+
 Születési dátum: 1989 Október 24\\
-Cím: Magyarország, 2600, Vác, Erzsébet utca 10/A\\
+Cím: Magyarország, 2600, Vác,\\ \hspace*{1em} Erzsébet utca 10/A\\ 
+GitHub: \href{https://github.com/simonzsolt}{\textbf{simonzsolt}}\\
 E-mail: \href{mailto:simon.zsolt@mail.com}{simon.zsolt@mail.com}\\
 Telefon: \href{tel:0036204110724}{+36 20 4110 724}
 
@@ -55,7 +72,7 @@ Tudományos és szakmai tevékenységek
 
 \begin{itemize}
   \item{ 
-    2018--2019: Javascript fejlesztő a Zeno Karl Schindler Alapítvány ösztöndíjas finanszírozásában, SISMEL (Società Internazionale per lo Studio del Medioevo Latino), Firenze. 
+    2018--2019: Javascript fejlesztő a Zeno Karl Schindler Alapítvány ösztöndíjas finanszírozásában, a SISMEL (Società Internazionale per lo Studio del Medioevo Latino) intézet megbízásából. 
     \href
       {http://www.sismelfirenze.it/index.php/formazione/borse-e-premi/item/219-mirabile-zeno-karl-schindler-foundation-fellowship-in-digital-humanities-2018} 
       {[Felhívás].}
