--- a/simon_zsolt_display_hu.tex
+++ b/simon_zsolt_display_hu.tex
@@ -1,36 +1,7 @@
-\documentclass[12pt,oneside,a4paper]{article}
+\input{preamble.tex}
 
-\usepackage[
-  top=11em, 
-  bottom=11em, 
-  left=10em,
-  right=10em]
-  {geometry}
-
-\usepackage{fancyhdr}
-\lhead{CV}
-\rhead{Simon Zsolt}
-\renewcommand{\headrulewidth}{0pt}
-\renewcommand{\footrulewidth}{0pt}
-
-\hyphenation{ma-gyar}
-
-\usepackage{hyperref}
-\usepackage[dvipsnames]{xcolor}
-\hypersetup{
-    colorlinks=true,
-    urlcolor=MidnightBlue
-}
-
-\usepackage{fontspec}
-\setmainfont[Mapping=tex-text,Numbers=OldStyle,Ligatures=TeX]{Linux Biolinum O}
-
-\setlength{\parindent}{0em}
-\renewcommand{\baselinestretch}{1.1}
-
-\usepackage{graphicx}
-\graphicspath{ {./} }
-\usepackage{wrapfig}
+\def \leftHeader {CV}
+\def \rightHeader {Simon Zsolt}
 
 \begin{document}
 
@@ -193,5 +164,5 @@ Nyelvtudás
 %  VERS: Verstan, poéttika, trópusok a 15–17. századti Európában, Fiatalok
 %  Konferenciája 2013, Budapest, reciti, 93–105. (htp://reciti.hu/wp-
 %  content/uploads/fkon1vn.pdf, only in Hungarian)
-    
+
 \end{document}
