--- a/simon_zsolt_display_hu.tex
+++ b/simon_zsolt_display_hu.tex
@@ -1,7 +1,9 @@
 \input{preamble.tex}
 
-\def \leftHeader {CV}
-\def \rightHeader {Simon Zsolt}
+\setlength{\parindent}{0em}
+
+\def \leftHeader{CV}
+\def \rightHeader{Simon Zsolt}
 
 \begin{document}
 
@@ -28,8 +30,8 @@ Telefon: \href{tel:0036204110724}{+36 20 4110 724}
 Tanulmányok
 
 \begin{itemize}
-  \item{ 2015-től Eötvös Loránd Tudományegyetem Bölcsésztudományi Kar Reneszánsz Tanulmányok mesterszak }
-  \item{ 2015: BA Eötvös Loránd Tudományegyetem Bölcsésztudományi Kar magyar alapképzési szak }
+  \item{2015-től Eötvös Loránd Tudományegyetem Bölcsésztudományi Kar Reneszánsz Tanulmányok mesterszak}
+  \item{2015: BA Eötvös Loránd Tudományegyetem Bölcsésztudományi Kar magyar alapképzési szak}
 \end{itemize}
 
 Tudományos és szakmai tevékenységek
@@ -38,77 +40,77 @@ Tudományos és szakmai tevékenységek
   \item{ 
     2017--2018: Javascript fejlesztő a Zeno Karl Schindler Alapítvány ösztöndíjas finanszírozásában, a SISMEL (Società Internazionale per lo Studio del Medioevo Latino) intézet megbízásából. 
     \href
-      {http://www.sismelfirenze.it/index.php/formazione/borse-e-premi/item/219-mirabile-zeno-karl-schindler-foundation-fellowship-in-digital-humanities-2018} 
-      {[Felhívás].}
+     {http://www.sismelfirenze.it/index.php/formazione/borse-e-premi/item/219-mirabile-zeno-karl-schindler-foundation-fellowship-in-digital-humanities-2018} 
+     {[Felhívás].}
   }
-  \item{ 2017-től közreműködő a  ``POSTDATA – Poetry Standardization and Linked
+  \item{2017-től közreműködő a  ``POSTDATA – Poetry Standardization and Linked
        Open Data'' projektben. }
-  \item{ 2016 Október 17: Előadás a Pesti Bölcsész Akadémia konferenciasorozaton (ELTE)
+  \item{2016 Október 17: Előadás a Pesti Bölcsész Akadémia konferenciasorozaton (ELTE)
           Gráfadatbázisok az irodalomtudományban címmel.
           \href{http://pestibolcseszakademia.blog.hu/2016/10/04/digitalis\_bolcseszet\_szovegen\_innen\_es\_tul\_marothy\_szilvia\_es\_simon\_zsolt\_kurzusa}
-          {[Program].} 
+         {[Program].} 
         }
-  \item { 2016 Október 24–28: DARIAH Winter School ``Open Data
+  \item{2016 Október 24–28: DARIAH Winter School ``Open Data
           Citation for Social Science and Humanities'', Humanities at Scale project (HaS),
           Prága. }
-  \item{ 2016 November 7: Előadás a Pesti Bölcsész Akadémia konferenciasorozaton (ELTE)
+  \item{2016 November 7: Előadás a Pesti Bölcsész Akadémia konferenciasorozaton (ELTE)
         Hálózati versadatbázisok címmel.
         \href
-          {http://pestibolcseszakademia.blog.hu/2016/10/04/digitalis\_bolcseszet\_szovegen\_innen\_es\_tul\_marothy\_szilvia\_es\_simon\_zsolt\_kurzusa}
-          {[Program].} 
+         {http://pestibolcseszakademia.blog.hu/2016/10/04/digitalis\_bolcseszet\_szovegen\_innen\_es\_tul\_marothy\_szilvia\_es\_simon\_zsolt\_kurzusa}
+         {[Program].} 
         }
-  \item{ 2016 Február 1–6: Részvétel a ``Paleography, Codicology, Philology.
+  \item{2016 Február 1–6: Részvétel a ``Paleography, Codicology, Philology.
        Digital Editing of Medieval Manuscripts Training Programme'' képzésen.
        Klosterneuburg, Bécs. }
-  \item{ 2015–2016: Technikai szerkesztője az Információtörténeti Műhely című sorozat alábbi megjelenéseinek: }
+  \item{2015–2016: Technikai szerkesztője az Információtörténeti Műhely című sorozat alábbi megjelenéseinek: }
     \begin{itemize}
       \item{ \textsc{Bognár} Péter, \textit{A régi magyar párrímköltészet német vonatkozásai}, 2016,
         \href
-          {htp://renaissance.elte.hu/wp-content/uploads/2016/02/parrim.pdf}
-          {[PDF].}
+         {htp://renaissance.elte.hu/wp-content/uploads/2016/02/parrim.pdf}
+         {[PDF].}
       }
       \item{ \textsc{Horváth} Iván, \textit{Ómagyar szövegemlékek mint textológiai tárgyak}, 2015,
         \href
-          {http://renaissance.elte.hu/wp-content/uploads/2016/01/Omagyar\_szo\%CC\%88vegemle\%CC\%81kek\_d-ed-150bb.pdf}
-          {[PDF].}
+         {http://renaissance.elte.hu/wp-content/uploads/2016/01/Omagyar\_szo\%CC\%88vegemle\%CC\%81kek\_d-ed-150bb.pdf}
+         {[PDF].}
       }
       \item{ \textsc{Tubay} Tiziano, \textit{A székely írás kutatásának története}, 2015,
         \href
-          {http://renaissance.elte.hu/wp-content/uploads/2016/04/Tubay\_A-szekely-iras-kutatasanak-tortenete\_OSzK\_2015\_digitalis.pdf}
-          {[PDF].}
+         {http://renaissance.elte.hu/wp-content/uploads/2016/04/Tubay\_A-szekely-iras-kutatasanak-tortenete\_OSzK\_2015\_digitalis.pdf}
+         {[PDF].}
       }
     \end{itemize}
-  \item{ 2015 November 24: Előadás a ``DHU2015 Workshop, Számító\-gép az
+  \item{2015 November 24: Előadás a ``DHU2015 Workshop, Számító\-gép az
     irodalomtudományban'' című workshopon, az MTA BTK Irodalomtudományi Intézete és a BME Méréstechnikai és Információs Rendszerek Tanszéke közös szervezésével. 
     \href
-      {htp://dhu2015.mit.bme.hu/felhivas} 
-      {[Felhívás].}
+     {htp://dhu2015.mit.bme.hu/felhivas} 
+     {[Felhívás].}
   }
-  \item{ 2015: THECA – A középkori magyarországi könyvkatalógusok és könyvjegyzékek adatbázis fejlesztése.
+  \item{2015: THECA – A középkori magyarországi könyvkatalógusok és könyvjegyzékek adatbázis fejlesztése.
     \href
-      {http://hece.elte.hu/index.php/theca/}
-      {[Impresszum].}
+     {http://hece.elte.hu/index.php/theca/}
+     {[Impresszum].}
   }
-  \item{ 2015: A HECE -- Humanism in East Central Europe WordPress alapú blog szerkesztése. 
+  \item{2015: A HECE -- Humanism in East Central Europe WordPress alapú blog szerkesztése. 
     \href
-      {http://hece.elte.hu/}
-      {[Honlap].}
+     {http://hece.elte.hu/}
+     {[Honlap].}
   }
-  \item{ 2014: Az Országos Széchényi Könyvtár Digitális Filológia osztályának korai közreműködője. 
+  \item{2014: Az Országos Széchényi Könyvtár Digitális Filológia osztályának korai közreműködője. 
     Az osztály hosszas szervezést követően nem alakult meg teljesen. }
-  \item{ 2014: A Régi Magyar Exemplumadatbázis társ-fejlesztője és műszaki szerkesztője.
+  \item{2014: A Régi Magyar Exemplumadatbázis társ-fejlesztője és műszaki szerkesztője.
     \href
-      {htp://sermones.elte.hu/exemplumadatbazis/}
-      {[Impresszum].}
+     {htp://sermones.elte.hu/exemplumadatbazis/}
+     {[Impresszum].}
   }
   \thispagestyle{fancy}
-  \item{ 2013: A \textit{Mathias Rex 1458--1490: Hungary at the Dawn
+  \item{2013: A \textit{Mathias Rex 1458--1490: Hungary at the Dawn
          of the Renaissance} című kötet Junior szerkesztője.
     \href
-      {http://renaissance.elte.hu/?page\_id=665} 
-      {[Impresszum].}
+     {http://renaissance.elte.hu/?page\_id=665} 
+     {[Impresszum].}
   }
-  \item{ 2013--2016: Gyakornoki pozíció az ELTE BTK Magyar Irodalom-~és Kultúratudományi 
+  \item{2013--2016: Gyakornoki pozíció az ELTE BTK Magyar Irodalom-~és Kultúratudományi 
     Intézet Régi Magyar Irodalom Tanszékén.
   }
 \end{itemize}
@@ -116,20 +118,21 @@ Tudományos és szakmai tevékenységek
 Szakmai ismeretek
 
   \begin{itemize}
-    \item{ Javascript: ES6, Node.js, Angular }
-    \item{ SQL és NoSQL adatbázisok: MariaDB, SQL Server, 
-      MongoDB, OrientDB, ArangoDB, Elasticsearch, Neo4j }
-    \item{ git, JIRA }
-    \item{ UNIX-típusú rendszrek ismerete }
-    \item{ PHP, Perl, \LaTeX}
+    \item{Javascript: ES6, Node.js, Angular}
+    \item{SQL és NoSQL adatbázisok: MariaDB, SQL Server, 
+      MongoDB, OrientDB, ArangoDB, Elasticsearch, Neo4j}
+    \item{git, JIRA}
+    \item{UNIX-típusú rendszrek ismerete}
+    \item{PHP, Perl, \LaTeX}
+    \item{AWS, Heroku, OpenShift}
   \end{itemize}
 
 Nyelvtudás
   
   \begin{itemize}
-    \item{ Angol: C1 komplex nyelvvizsga, folyékon szövegértés és fogalmazás }
-    \item{ Latin: alapszintű olvasási kompetencia }
-    \item{ Olasz: alapszintű olvasási és szövegértési kompetencia }
+    \item{Angol: C1 komplex nyelvvizsga, folyékon szövegértés és fogalmazás}
+    \item{Latin: alapszintű olvasási kompetencia}
+    \item{Olasz: alapszintű olvasási és szövegértési kompetencia}
   \end{itemize}
 
 \thispagestyle{fancy}
