--- a/preamble.tex
+++ b/preamble.tex
@@ -15,11 +15,13 @@
 
 \hyphenation{ma-gyar}
 
+\usepackage[hyphens]{url}
+
 \usepackage{hyperref}
 \usepackage[dvipsnames]{xcolor}
 \hypersetup{
-    colorlinks=true,
-    urlcolor=MidnightBlue
+  colorlinks=true,
+  urlcolor=MidnightBlue
 }
 
 \usepackage{fontspec}
