--- a/simon_zsolt_display_hu.tex
+++ b/simon_zsolt_display_hu.tex
@@ -5,6 +5,8 @@
 \def \leftHeader{CV}
 \def \rightHeader{Simon Zsolt}
 
+\setmainfont[Mapping=tex-text,Numbers=OldStyle,Ligatures=TeX]{Linux Biolinum O}
+
 \begin{document}
 
 \begin{wrapfigure}{r}{13em}
