--- a/simon_zsolt_print_hu.tex
+++ b/simon_zsolt_print_hu.tex
@@ -5,9 +5,11 @@
 \def \leftHeader{CV}
 \def \rightHeader{Simon Zsolt}
 
+\setmainfont[Mapping=tex-text,Numbers=OldStyle,Ligatures=TeX]{TeX Gyre Termes}
+
 \begin{document}
 
-\begin{wrapfigure}{r}{10em}
+\begin{wrapfigure}{r}{13em}
   \flushright
   \includegraphics[scale=0.4]{portrait_mono} 
 \end{wrapfigure}
@@ -19,7 +21,7 @@
 
 Születési dátum: 1989 Október 24\\
 Cím: Magyarország, 2600, Vác,\\ \hspace*{1em} Erzsébet utca 10/A\\ 
-GitHub: \url{https://github.com/simonzsolt}\\
+GitHub: simonzsolt\\
 E-mail: \url{simon.zsolt@mail.com}\\
 Telefon: +36 20 4110 724
 
