--- a/letter.tex
+++ b/letter.tex
@@ -1,15 +1,17 @@
 \input{preamble.tex}
 
+\setmainfont[Mapping=tex-text,Numbers=OldStyle,Ligatures=TeX]{Linux Biolinum O}
 
 \setlength{\parindent}{1.5em}
 \renewcommand{\baselinestretch}{1.1}
+\def \addressee {Bene Studio}
 
 \begin{document}
 	
 
 	\thispagestyle{empty}
 		
-	Tisztelt Bene Studio!
+	Tisztelt \addressee!
 
 	\vspace{1em}
 
