fix URLs edit address

--- a/simon_zsolt_display_hu.tex
+++ b/simon_zsolt_display_hu.tex
@@ -21,8 +21,9 @@
 
 \large
 
-Születési dátum: 1989 Október 24\\
-Cím: Magyarország, 2600, Vác,\\ \hspace*{1em} Erzsébet utca 10/A\\ 
+Születési dátum: 1989 Október 24.\\
+% Cím: Magyarország, 2600, Vác,\\ \hspace*{1em} Erzsébet utca 10/A\\ 
+Tartózkodási cím: Budapest VIII.\\ \hspace*{1em} kerület\\ 
 GitHub: \href{https://github.com/simonzsolt}{\textbf{simonzsolt}}\\
 E-mail: \href{mailto:simon.zsolt@mail.com}{simon.zsolt@mail.com}\\
 Telefon: \href{tel:0036204110724}{+36 20 4110 724}
@@ -68,7 +69,7 @@ Tudományos és szakmai tevékenységek
     \begin{itemize}
       \item{ \textsc{Bognár} Péter, \textit{A régi magyar párrímköltészet német vonatkozásai}, 2016,
         \href
-         {htp://renaissance.elte.hu/wp-content/uploads/2016/02/parrim.pdf}
+         {http://renaissance.elte.hu/wp-content/uploads/2016/02/parrim.pdf}
          {[PDF].}
       }
       \item{ \textsc{Horváth} Iván, \textit{Ómagyar szövegemlékek mint textológiai tárgyak}, 2015,
@@ -85,7 +86,7 @@ Tudományos és szakmai tevékenységek
   \item{2015 November 24: Előadás a ``DHU2015 Workshop, Számító\-gép az
     irodalomtudományban'' című workshopon, az MTA BTK Irodalomtudományi Intézete és a BME Méréstechnikai és Információs Rendszerek Tanszéke közös szervezésével. 
     \href
-     {htp://dhu2015.mit.bme.hu/felhivas} 
+     {http://dhu2015.mit.bme.hu/felhivas} 
      {[Felhívás].}
   }
   \item{2015: THECA – A középkori magyarországi könyvkatalógusok és könyvjegyzékek adatbázis fejlesztése.
@@ -102,7 +103,7 @@ Tudományos és szakmai tevékenységek
     Az osztály hosszas szervezést követően nem alakult meg teljesen. }
   \item{2014: A Régi Magyar Exemplumadatbázis társ-fejlesztője és műszaki szerkesztője.
     \href
-     {htp://sermones.elte.hu/exemplumadatbazis/}
+     {http://sermones.elte.hu/exemplumadatbazis/}
      {[Impresszum].}
   }
   \thispagestyle{fancy}
