add hyphenation add position variable

--- a/preamble.tex
+++ b/preamble.tex
@@ -14,6 +14,9 @@
 \renewcommand{\footrulewidth}{0pt}
 
 \hyphenation{ma-gyar}
+\hyphenation{A-ka-dé-mi-a}
+\hyphenation{In-for-má-ci-ó-tör-té-ne-ti}
+\hyphenation{Da-ta-ba-se}
 
 \usepackage[hyphens]{url}
 
