--- a/simon_zsolt_print_hu.tex
+++ b/simon_zsolt_print_hu.tex
@@ -19,8 +19,9 @@
   \vspace{1em}
 \end{Large}
 
-Születési dátum: 1989 Október 24\\
-Cím: Magyarország, 2600, Vác,\\ \hspace*{1em} Erzsébet utca 10/A\\ 
+Születési dátum: 1989 Október 24.\\
+% Cím: Magyarország, 2600, Vác,\\ \hspace*{1em} Erzsébet utca 10/A\\ 
+Tartózkodási cím: Budapest VIII.\\ \hspace*{1em} kerület\\ 
 GitHub: simonzsolt\\
 E-mail: \url{simon.zsolt@mail.com}\\
 Telefon: +36 20 4110 724
@@ -60,7 +61,7 @@ Tudományos és szakmai tevékenységek
     \begin{itemize}
       \item{ \textsc{Bognár} Péter, \textit{A régi magyar párrímköltészet német vonatkozásai}, 2016,
         \url
-         {htp://renaissance.elte.hu/wp-content/uploads/2016/02/parrim.pdf}
+         {http://renaissance.elte.hu/wp-content/uploads/2016/02/parrim.pdf}
       }
       \item{ \textsc{Horváth} Iván, \textit{Ómagyar szövegemlékek mint textológiai tárgyak}, 2015,
         \url
@@ -74,7 +75,7 @@ Tudományos és szakmai tevékenységek
   \item{2015 November 24: Előadás a ``DHU2015 Workshop, Számító\-gép az
     irodalomtudományban'' című workshopon, az MTA BTK Irodalomtudományi Intézete és a BME Méréstechnikai és Információs Rendszerek Tanszéke közös szervezésével. 
     \url
-     {htp://dhu2015.mit.bme.hu/felhivas} 
+     {http://dhu2015.mit.bme.hu/felhivas} 
   }
   \item{2015: THECA – A középkori magyarországi könyvkatalógusok és könyvjegyzékek adatbázis fejlesztése.
     \url
@@ -89,7 +90,7 @@ Tudományos és szakmai tevékenységek
     Az osztály hosszas szervezést követően nem alakult meg teljesen. }
   \item{2014: A Régi Magyar Exemplumadatbázis társ-fejlesztője és műszaki szerkesztője.
     \url
-     {htp://sermones.elte.hu/exemplumadatbazis/}
+     {http://sermones.elte.hu/exemplumadatbazis/}
   }
   \item{2013: A \textit{Mathias Rex 1458--1490: Hungary at the Dawn
          of the Renaissance} című kötet Junior szerkesztője.
