--- a/simon_zsolt_print_hu.tex
+++ b/simon_zsolt_print_hu.tex
@@ -20,20 +20,12 @@
 \end{Large}
 
 Születési dátum: 1989 Október 24.\\
-% Cím: Magyarország, 2600, Vác,\\ \hspace*{1em} Erzsébet utca 10/A\\ 
 Tartózkodási cím: Budapest VIII.\\ \hspace*{1em} kerület\\ 
 GitHub: simonzsolt\\
-E-mail: \url{simon.zsolt@mail.com}\\
+E-mail: simon.zsolt@mail.com\\
 Telefon: +36 20 4110 724
 
 \vspace{1em}
-
-Tanulmányok
-
-\begin{itemize}
-  \item{2015-től Eötvös Loránd Tudományegyetem Bölcsésztudományi Kar Reneszánsz Tanulmányok mesterszak}
-  \item{2015: BA Eötvös Loránd Tudományegyetem Bölcsésztudományi Kar magyar alapképzési szak}
-\end{itemize}
 
 Tudományos és szakmai tevékenységek
 
@@ -100,6 +92,13 @@ Tudományos és szakmai tevékenységek
   \item{2013--2016: Gyakornoki pozíció az ELTE BTK Magyar Irodalom-~és Kultúratudományi 
     Intézet Régi Magyar Irodalom Tanszékén.
   }
+\end{itemize}
+
+Tanulmányok
+
+\begin{itemize}
+  \item{2015-től Eötvös Loránd Tudományegyetem Bölcsésztudományi Kar Reneszánsz Tanulmányok mesterszak}
+  \item{2015: BA Eötvös Loránd Tudományegyetem Bölcsésztudományi Kar magyar alapképzési szak}
 \end{itemize}
 
 Szakmai ismeretek
