hyphenation add acronyms add position variable

--- a/preamble.tex
+++ b/preamble.tex
@@ -17,6 +17,9 @@
 \hyphenation{A-ka-dé-mi-a}
 \hyphenation{In-for-má-ci-ó-tör-té-ne-ti}
 \hyphenation{Da-ta-ba-se}
+\hyphenation{je-löl-t}
+\hyphenation{e-lő-se-gí-té-sé-re}
+\hyphenation{fej-lesz-té-sé-ben}
 
 \usepackage[hyphens]{url}
 
