--- a/simon_zsolt_display_hu.tex
+++ b/simon_zsolt_display_hu.tex
@@ -4,12 +4,13 @@
 
 \def \leftHeader{CV}
 \def \rightHeader{Simon Zsolt}
+\def \position{}
 
 \setmainfont[Mapping=tex-text,Numbers=OldStyle,Ligatures=TeX]{Linux Biolinum O}
 
 \begin{document}
 
-\begin{wrapfigure}{r}{13em}
+\begin{wrapfigure}{r}{8em}
   \flushright
   \includegraphics[scale=0.4]{portrait_mono} 
 \end{wrapfigure}
@@ -26,6 +27,10 @@ Tartózkodási cím: Budapest VIII.\\ \hspace*{1em} kerület\\
 GitHub: \href{https://github.com/simonzsolt}{\textbf{simonzsolt}}\\
 E-mail: \href{mailto:simon.zsolt@mail.com}{simon.zsolt@mail.com}\\
 Telefon: \href{tel:0036204110724}{+36 20 4110 724}
+
+\vspace{1em}
+
+Megpályázott pozíció: \position
 
 \vspace{1em}
 
@@ -123,7 +128,7 @@ Szakmai ismeretek
     \item{Javascript: ES6, Node.js, Angular}
     \item{SQL és NoSQL adatbázisok: MariaDB, SQL Server, 
       MongoDB, OrientDB, ArangoDB, Elasticsearch, Neo4j}
-    \item{git, JIRA}
+    \item{Git, JIRA, Agile, SCRAM, TDD, CI, CD}
     \item{UNIX-típusú rendszrek ismerete}
     \item{PHP, Perl, \LaTeX}
     \item{AWS, Heroku, OpenShift}
