--- a/simon_zsolt_print_hu.tex
+++ b/simon_zsolt_print_hu.tex
@@ -107,7 +107,7 @@ Szakmai ismeretek
     \item{Javascript: ES6, Node.js, Angular}
     \item{SQL és NoSQL adatbázisok: MariaDB, SQL Server, 
       MongoDB, OrientDB, ArangoDB, Elasticsearch, Neo4j}
-    \item{git, JIRA}
+    \item{Git, JIRA, Agile, SCRAM, TDD, CI, CD}
     \item{UNIX-típusú rendszrek ismerete}
     \item{PHP, Perl, \LaTeX}
     \item{AWS, Heroku, OpenShift}
