--- a/simon_zsolt_print_en.tex
+++ b/simon_zsolt_print_en.tex
@@ -4,7 +4,7 @@
 
 \def \leftHeader{CV}
 \def \rightHeader{Zsolt Simon}
-\def \position{JavaScript Engineer}
+\def \position{}
 
 \setmainfont[Mapping=tex-text,Numbers=OldStyle,Ligatures=TeX]{TeX Gyre Termes}
 
@@ -122,7 +122,7 @@ Technical skills
     \item{Javascript: ES6, Node.js, Angular}
     \item{SQL and NoSQL databases: MariaDB, SQL Server, 
       MongoDB, OrientDB, ArangoDB, Elasticsearch, Neo4j}
-    \item{git, JIRA}
+    \item{Git, JIRA, Agile, SCRAM, TDD, CI, CD}
     \item{UNIX-like systems}
     \item{PHP, Perl, \LaTeX}
     \thispagestyle{fancy}
